# Tidal

./: Cargo.toml  README.md
tidal-dl/: Cargo.toml  README.md
tidal-dl/src/: main.rs
tidal-rs/: Cargo.toml  README.md
tidal-rs/src/: lib.rs  uniffi.rs
tidal-rs/src/core/: api.rs  auth.rs  decrypt.rs  error.rs  lyrics.rs  mod.rs  stream.rs
tidal-rs/src/core/api/: albums.rs  artists.rs  client.rs  discovery.rs  favorites.rs  mod.rs  models.rs  playback.rs  playlists.rs  search.rs  tracks.rs  users.rs
tuidal/: Cargo.toml  README.md
tuidal/src/: main.rs
