[package]
name = "tidal-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
tidal = { path = "../tidal-rs" }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
regex = "1.12.2"
clap = { version = "4.5.53", features = ["derive"] }
termcolor = "1.4.1"
indicatif = "0.18.3"
