[package]
name = "tidal"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
reqwest = { version = "0.12.25", features = ["json", "gzip", "stream"] }
tokio = { version = "1.48.0", features = ["time", "fs", "io-util", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4"] }
aes = "0.8.4"
ctr = "0.9.2"
cbc = "0.1.2"
quick-xml = "0.38.4"
futures = "0.3.31"
bytes = "1.11.0"
urlencoding = "2.1.3"
thiserror = "2.0.17"